# fdupes-rs

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  Readme.md  snapcraft.yaml
.github/workflows/: main.yml  rust.yml
docker/: Dockerfile
old_src/: crc_32.cpp  crc_32.h  fdupes.cpp
src/: dupemessage.rs  dupescanner.rs  fdupesgroup.rs  lib.rs  main.rs
src/receiver/: basic_receiver.rs  mod.rs  ui_receiver.rs
src/scanner/: fdupesgroup.rs  mod.rs
src/scanner/group_comparator/: exact.rs  json.rs  mod.rs
src/ui/: mod.rs
test_data/: file1.txt  file2.txt
