[package]
name = "fdupes"
version = "0.1.0"
authors = ["SMartinScottLogic <smartin@scottlogic.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
walkdir = "2"
trash = "^2.0"          # A library for moving files and folders to the Recycle Bin
crc = "1.8.1"            # Rust implementation of CRC(16, 32, 64) with support of various standards
chrono = "0.4.10"        # Date and time library for Rust
memcmp = "0.0.6"              # Optimized memory comparisons for integer slices. Temporary solution until rust issue 16913 is res…
num-format = "0.4.0"              # A Rust crate for producing string-representations of numbers, formatted according to internat…
# A simple to use, efficient, and full-featured Command Line Argument Parser
clap = { version = "3.0.14", features = ["derive"] }