[package]
name = "fdupes"
version = "0.1.0"
authors = ["SMartinScottLogic <smartin@scottlogic.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
walkdir = "2.3.2"
trash = "3.0.0"          # A library for moving files and folders to the Recycle Bin
crc = "1.8.1"            # Rust implementation of CRC(16, 32, 64) with support of various standards
chrono = "0.4.22"        # Date and time library for Rust
memcmp = "0.0.6"              # Optimized memory comparisons for integer slices. Temporary solution until rust issue 16913 is res…
num-format = "0.4.0"              # A Rust crate for producing string-representations of numbers, formatted according to internat…
# A simple to use, efficient, and full-featured Command Line Argument Parser
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"

crossterm = "0.26.0"            # A crossplatform terminal library for manipulating terminals.
magic = "0.13.0"            # libmagic bindings

serde_json = "1.0.82"                   # A JSON serialization file format
bool_ext = "0.5.3"
